[package]
name = "gts-logger"
version = "0.1.3"
description = "Gts logger"
edition = "2021"

[dependencies]
libc = "0.2"
minstant = "0.1.2"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0"
anyhow = "1.0.68"
bytemuck = "1.13.1"
gts-transport = { path = "../transport"}
serde = {version = "1.0.162", features = ["derive"] }
arrayvec = {version = "0.7.2", features = ["serde"]}
core_affinity = "0.8.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
libc = "0.2"
minstant = "0.1.2"

[[bin]]
name = "consolelog"
path = "src/example/consolelog.rs"


[[bench]]
name = "criterion"
harness = false
