[package]
name = "gts-logger"
version = "0.1.6"
description = "Gts logger"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fstrade/gts-common"
authors = ["Igor Potapenko"]

[dependencies]
libc = "0.2"
minstant = "0.1.2"
log = "0.4.17"
env_logger = "0.10.0"
thiserror = "1.0"
anyhow = "1.0.68"
bytemuck = "1.13.1"
gts-transport = { version = "0.1.6" }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.97" }
arrayvec = { version = "0.7.2", features = ["serde"]}
core_affinity = "0.8.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"
libc = "0.2"
minstant = "0.1.2"

[[bin]]
name = "consolelog"
path = "src/example/consolelog.rs"


[[bench]]
name = "criterion"
harness = false
